--- a/src/components/UI/Styles.module.css
+++ b/src/components/UI/Styles.module.css
@@ -12,3 +12,15 @@
   background-color: unset;
   cursor: pointer;
 }
+
+.error {
+  height: 20px;
+  text-align: center;
+  margin-top: 15px;
+  position: relative;
+  font-size: 12px;
+  margin: auto;
+  margin-top: 5px;
+  color: crimson;
+  text-align: center;
+}
