--- a/src/components/auth/Auth.module.css
+++ b/src/components/auth/Auth.module.css
@@ -38,7 +38,7 @@
   display: flex;
   align-items: center;
   border: 1px solid #d0d0d0;
-
+  margin: auto;
   overflow: hidden; /* so it looks like one input */
 }
 
@@ -47,7 +47,8 @@
   height: 100%;
   align-content: center;
   text-align: right;
-  font-size: 14px;
+  font-size: 20px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background-color: unset;
 }
 
@@ -57,23 +58,8 @@
   border: none;
   outline: none;
   padding: 0 12px;
-  font-size: 14px;
+  font-size: 20px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  letter-spacing: 1px;
   background-color: #ffffff;
-}
-.submit {
-  width: 50%;
-  margin-left: 25%;
-  height: 40px;
-  border: none;
-  outline: none;
-  background-color: var(--yellow);
-  font-weight: 900;
-  font-size: 1rem;
-  color: var(--dark);
-  cursor: pointer;
-  border-radius: 15px;
-}
-.submit:disabled {
-  opacity: 0.7;
-  cursor: not-allowed;
 }
