--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -42,6 +42,10 @@
   background-color: lightgray;
   border-bottom-left-radius: 15px;
   font-family: monospace;
+  z-index: 10;
+  opacity: 0.92;
+  font-weight: 900;
+  height: 220px;
 }
 .list {
   list-style-type: none;
@@ -52,10 +56,18 @@
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  font-size: large;
+  font-size: x-large;
   margin-top: 15px;
 }
 .listItem > span {
   display: flex;
   align-items: flex-end;
+}
+.please {
+  font-size: clamp(1rem, 4vw, 2rem);
+  color: var(--dark);
+  text-align: center;
+  margin: auto;
+  height: 100%;
+  align-content: center;
 }
