--- a/src/components/UI/Styles.module.css
+++ b/src/components/UI/Styles.module.css
@@ -27,9 +27,12 @@
 }
 
 /* BUTTON */
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
 .submit {
-  width: 50%;
-  margin-left: 25%;
+  width: 240px;
   height: 40px;
   border: none;
   outline: none;
@@ -39,11 +42,17 @@
   color: var(--dark);
   cursor: pointer;
   border-radius: 15px;
-  margin-top: 25px;
+  margin-top: 2vh;
 }
 .submit:disabled {
   opacity: 0.7;
   cursor: not-allowed;
+}
+.medium {
+  width: 170px;
+  height: 30px;
+  font-size: 0.9rem;
+  margin: auto;
 }
 
 /* SPINNER */
